Dark mode issue fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,7 +17,7 @@
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme="dark"] {
+[data-theme='dark'] {
   --ifm-color-primary: #25c2a0;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
@@ -34,7 +34,7 @@
   padding: 0 var(--ifm-pre-padding);
 }
 
-[data-theme="dark"] .docusaurus-highlight-code-line {
+[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
 .navbar__logo {
@@ -116,6 +116,13 @@ section.features-section {
 }
 .features-wrapper .item .description p {
   margin: 0;
+}
+
+html[data-theme='dark'] .icon-wrap svg.stroke path {
+  stroke: #fff;
+}
+html[data-theme='dark'] .icon-wrap svg.fill path {
+  fill: #fff !important;
 }
 
 @media screen and (max-width: 1280px) {
